Cleanup sonarcloud issues
Request: MO
Change-Id: I42ff598fec8cab262eb3046db863255683e04bf1